# sabueso

./: .gitignore  README.md  pyproject.toml
dev_guide/: API_CONVENTIONS.md  ARCHITECTURE.md  CHECKPOINT.md  DATA_FLOW.md  DECISIONS.md  EVAL_CARDS.md  GLOSSARY.md  LICENSING_AND_COMPLIANCE.md  NEXT_STEPS.md  PUBLIC_API.md  RISKS_AND_OPEN_QUESTIONS.md  ROADMAP.md  SCHEMA.md  SOURCES.md  VISION.md
devguide/: API_CONVENTIONS.md  ARCHITECTURE.md  CACHE_POLICY.md  CARD_SIZE_RISKS.md  CHECKPOINT.md  DATA_FLOW.md  DATA_SOURCES_STATUS.md  DECISIONS.md  DOCS_GAPS.md  FIELD_PATHS.md  FUTURE_EXPANSIONS.md  INTERFACES_MINIMAL.md  LOCATION_EXAMPLES.md  NEXT_STEPS.md  PUBLIC_API.md  QUALITY_AND_TESTS.md  RESOLVER.md  RISKS_AND_OPEN_QUESTIONS.md  ROADMAP.md  SCHEMA.md  SELECTION_RULES_EXAMPLES.md  SOURCES.md  STORAGE_LAYOUT.md  TESTS.md  UNIPROT_ENUMS.md  USE_CASES.md  VISION.md
devtools/conda-envs/: development_env.yaml
docs/: Makefile  README.md  conf.py  index.md  index.rst  overview.rst  selection_rules.json  selection_rules.rst  storage.rst  testing.rst
docs/_templates/: copyright.html
docs/api/: core.md  errors.md  index.md  mappings.md  ops.md  public.md  resolver.md  tools.md
sabueso/: __init__.py
sabueso/core/: aggregator.py  card.py  deck.py  errors.py  evidence_store.py  merge.py
sabueso/mappings/: README.md  (+13 more)
schemas/: card_schema.yaml  card_schema_0.1.0.yaml
temp_data/: 2NZT.json  66414.json  A0A140VJM9.json  CHEMBL90555.json  IPR000001.json  P35372.json  P52789.json
tools/: README.md  __init__.py  validate_card.py  validate_deck.py  validate_schema.py
(+138 files in other folders)
